core-dsp/include/ScoreFollowerCApi.h

// Number of pitch classes per chroma frame, mirroring
// scorefollower::dsp::PitchClassCount (Chromagram.hpp). Exposed here as a
// plain macro so that Dart callers building
// score_follower_load_reference_chromagram's flat input array know its
// row stride without hardcoding the value independently.
#define SCORE_FOLLOWER_PITCH_CLASS_COUNT 12
// Opaque handle to a ScoreFollowerEngine instance. Its real definition
// (a struct owning a FeatureExtractor and an AlignmentEngine) lives entirely
// inside ScoreFollowerCApi.cpp and is never exposed across this boundary.
typedef struct ScoreFollowerEngine ScoreFollowerEngine;
// Plain-old-data mirror of scorefollower::dsp::AlignmentPosition
// (AlignmentEngine.hpp), returned by value so that callers (including Dart,
// via an ffi.Struct subclass) never need to manage its memory explicitly.
typedef struct {
    double reference_frame_index;
    double alignment_confidence;
    double cumulative_distortion_cost;
} ScoreFollowerAlignmentPosition;
// Mirrors scorefollower::dsp::TrackingMode. FIXED_TEMPO keeps native
// alignment on the Rubato path; the host owns the presentation cursor.
typedef enum {
    SCORE_FOLLOWER_TRACKING_MODE_RUBATO = 0,
    SCORE_FOLLOWER_TRACKING_MODE_STRICT = 1,
    SCORE_FOLLOWER_TRACKING_MODE_FIXED_TEMPO = 2
} ScoreFollowerTrackingMode;
// Constructs a new engine configured for the given audio sample rate and
// hop length (both forwarded verbatim to the underlying FeatureExtractor's
// FeatureExtractionConfiguration; all other extraction parameters keep
// their library defaults). Returns NULL on failure (for example, if
// construction throws due to an allocation failure); callers must check for
// NULL before passing the result to any other function in this header.
SCORE_FOLLOWER_CORE_API ScoreFollowerEngine* score_follower_create(double sample_rate_hz,
                                                                    size_t hop_length_samples);
// Destroys a previously created engine and releases all of its resources.
// Passing NULL is a safe no-op. The handle must not be used again after
// this call returns.
SCORE_FOLLOWER_CORE_API void score_follower_destroy(ScoreFollowerEngine* engine);
// Supplies the reference chromagram the live performance will be aligned
// against, as a flat, row-major array of frame_count *
// SCORE_FOLLOWER_PITCH_CLASS_COUNT floats (one row of
// SCORE_FOLLOWER_PITCH_CLASS_COUNT pitch-class energies per frame). This is
// a one-time, non-hot-path call, typically made once at the start of a
// performance right after score_follower_create. Returns 0 on success, a
// negative value on malformed input (a NULL engine, or a NULL data pointer
// paired with a non-zero frame_count) or on an internal allocation failure.
SCORE_FOLLOWER_CORE_API int score_follower_load_reference_chromagram(
    ScoreFollowerEngine* engine, const float* pitch_class_energies_row_major, size_t frame_count,
    double sample_rate_hz, size_t hop_length_samples);
// Pushes a contiguous block of newly captured, mono, already-resampled
// audio samples into the engine. Internally, this both feeds the
// FeatureExtractor and, for every chroma frame the extractor completes as a
// result, immediately advances the AlignmentEngine by one step. This is the
// only function in this header intended to be called from a real-time (or
// near-real-time) audio-producing thread; it never blocks, allocates, or
// throws across this boundary. Passing a NULL engine is a safe no-op.
SCORE_FOLLOWER_CORE_API void score_follower_push_audio_frame(ScoreFollowerEngine* engine,
                                                               const float* audio_samples,
                                                               size_t sample_count);
// Reads the engine's current estimate of the live performance's position
// within the reference score. Safe to call concurrently with
// score_follower_push_audio_frame from a different thread: internally, this
// only reads the atomically published fields OnlineDtwAlignmentEngine
// already maintains for exactly this purpose. Passing a NULL engine returns
// a zero-initialized position.
SCORE_FOLLOWER_CORE_API ScoreFollowerAlignmentPosition
score_follower_get_alignment_position(const ScoreFollowerEngine* engine);
// Repositions the alignment engine so subsequent audio pushes resume
// tracking from reference_frame_index (clamped to the loaded reference).
// Also resets the FeatureExtractor's partial sample accumulator so stale
// audio from before the seek cannot emit chroma at the old locus. Returns
// 0 on success, a negative value on a NULL engine or when no reference
// chromagram has been loaded yet.
SCORE_FOLLOWER_CORE_API int score_follower_seek_to_reference_frame(ScoreFollowerEngine* engine,
                                                                    double reference_frame_index);
// Selects the practice-mode policy for subsequent audio pushes. Returns 0
// on success, a negative value on a NULL engine or an unrecognized mode.
SCORE_FOLLOWER_CORE_API int score_follower_set_tracking_mode(ScoreFollowerEngine* engine,
                                                              ScoreFollowerTrackingMode mode);
// Confidence below which STRICT mode freezes reference advance. Default is
// approximately 0.55 (aligned with the amber/green UI boundary). Returns 0
// on success, a negative value on a NULL engine or a non-finite /
// out-of-range threshold.
SCORE_FOLLOWER_CORE_API int score_follower_set_strict_confidence_threshold(
    ScoreFollowerEngine* engine, double threshold);
// Resets the engine's extraction and alignment state (partially
// accumulated audio, current position, cumulative cost) so a new
// performance attempt can begin without discarding the already-loaded
// reference chromagram. Passing a NULL engine is a safe no-op.
SCORE_FOLLOWER_CORE_API void score_follower_reset(ScoreFollowerEngine* engine);