app/score_follower_bridge/lib/src/score_follower_bindings.dart

// NOTE ON PROVENANCE: this file is meant to be generated by
// `dart run ffigen` (see ../../ffigen.yaml) from
// ../../../core-dsp/include/ScoreFollowerCApi.h. It was instead authored by
// hand, field-for-field and function-for-function against that exact
// header, because neither the Dart SDK nor ffigen were available in the
// environment this bridge package was scaffolded in. Treat it as a
// placeholder: run `dart run ffigen` against a real Dart/Flutter toolchain
// at the earliest opportunity to (a) confirm it matches byte-for-byte, and
// (b) restore the normal workflow where this file is regenerated, not
// hand-edited, whenever ScoreFollowerCApi.h changes.
//
// ignore_for_file: non_constant_identifier_names
library;

import 'dart:ffi' as ffi;

/// Mirrors `SCORE_FOLLOWER_PITCH_CLASS_COUNT` from ScoreFollowerCApi.h: the
/// row stride (in float32 elements) of the flat array
/// [scoreFollowerLoadReferenceChromagram] expects.
const int scoreFollowerPitchClassCount = 12;

/// Opaque native handle type mirroring `ScoreFollowerEngine` (the C
/// typedef, not this Dart binding's own higher-level
/// `ScoreFollowerEngine` class in ../score_follower_bridge.dart). Never
/// instantiated in Dart; only ever referenced through
/// `ffi.Pointer<ScoreFollowerEngineHandle>`.
final class ScoreFollowerEngineHandle extends ffi.Opaque {}

/// Mirrors `ScoreFollowerAlignmentPosition` from ScoreFollowerCApi.h
/// field-for-field, returned by value from
/// [scoreFollowerGetAlignmentPosition]. Application code should generally
/// prefer the idiomatic `ScoreFollowerAlignmentPosition` class in
/// ../score_follower_bridge.dart instead of this raw native struct.
final class ScoreFollowerAlignmentPositionNative extends ffi.Struct {
  @ffi.Double()
  external double reference_frame_index;

  @ffi.Double()
  external double alignment_confidence;

  @ffi.Double()
  external double cumulative_distortion_cost;
}

@ffi.Native<ffi.Pointer<ScoreFollowerEngineHandle> Function(ffi.Double, ffi.Size)>(
  symbol: 'score_follower_create',
)
external ffi.Pointer<ScoreFollowerEngineHandle> scoreFollowerCreate(
  double sampleRateHz,
  int hopLengthSamples,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ScoreFollowerEngineHandle>)>(
  symbol: 'score_follower_destroy',
)
external void scoreFollowerDestroy(ffi.Pointer<ScoreFollowerEngineHandle> engine);

@ffi.Native<
    ffi.Int Function(ffi.Pointer<ScoreFollowerEngineHandle>, ffi.Pointer<ffi.Float>, ffi.Size, ffi.Double,
        ffi.Size)>(symbol: 'score_follower_load_reference_chromagram')
external int scoreFollowerLoadReferenceChromagram(
  ffi.Pointer<ScoreFollowerEngineHandle> engine,
  ffi.Pointer<ffi.Float> pitchClassEnergiesRowMajor,
  int frameCount,
  double sampleRateHz,
  int hopLengthSamples,
);

// isLeaf: true is valid (and important for call latency) here because
// score_follower_push_audio_frame is documented in ScoreFollowerCApi.h as
// never blocking, allocating, or re-entering the Dart VM; it skips the
// usual FFI safepoint transition entirely.
@ffi.Native<ffi.Void Function(ffi.Pointer<ScoreFollowerEngineHandle>, ffi.Pointer<ffi.Float>, ffi.Size)>(
  symbol: 'score_follower_push_audio_frame',
  isLeaf: true,
)
external void scoreFollowerPushAudioFrame(
  ffi.Pointer<ScoreFollowerEngineHandle> engine,
  ffi.Pointer<ffi.Float> audioSamples,
  int sampleCount,
);

// isLeaf: true for the same reason as scoreFollowerPushAudioFrame: this
// only reads three std::atomic<double> fields with memory_order_acquire,
// documented as never blocking or allocating.
@ffi.Native<ScoreFollowerAlignmentPositionNative Function(ffi.Pointer<ScoreFollowerEngineHandle>)>(
  symbol: 'score_follower_get_alignment_position',
  isLeaf: true,
)
external ScoreFollowerAlignmentPositionNative scoreFollowerGetAlignmentPosition(
  ffi.Pointer<ScoreFollowerEngineHandle> engine,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ScoreFollowerEngineHandle>, ffi.Double)>(
  symbol: 'score_follower_seek_to_reference_frame',
)
external int scoreFollowerSeekToReferenceFrame(
  ffi.Pointer<ScoreFollowerEngineHandle> engine,
  double referenceFrameIndex,
);

/// Mirrors `ScoreFollowerTrackingMode` from ScoreFollowerCApi.h.
abstract final class ScoreFollowerTrackingModeNative {
  static const int rubato = 0;
  static const int strict = 1;
  static const int fixedTempo = 2;
}

@ffi.Native<ffi.Int Function(ffi.Pointer<ScoreFollowerEngineHandle>, ffi.Int)>(
  symbol: 'score_follower_set_tracking_mode',
)
external int scoreFollowerSetTrackingMode(
  ffi.Pointer<ScoreFollowerEngineHandle> engine,
  int mode,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ScoreFollowerEngineHandle>, ffi.Double)>(
  symbol: 'score_follower_set_strict_confidence_threshold',
)
external int scoreFollowerSetStrictConfidenceThreshold(
  ffi.Pointer<ScoreFollowerEngineHandle> engine,
  double threshold,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ScoreFollowerEngineHandle>)>(
  symbol: 'score_follower_reset',
)
external void scoreFollowerReset(ffi.Pointer<ScoreFollowerEngineHandle> engine);
